fix(unitable): give thead z-index one below dropdown stuff
Because dropdowns (select, autocomplete, datepicker) directly above
a table would not go above table header

--- a/src/styles/components/uniTable/_table.sass
+++ b/src/styles/components/uniTable/_table.sass
@@ -24,7 +24,7 @@ uni-table, table.uni-table
         position: -webkit-sticky // You had one job, autoprefixer! 😿
         position: sticky
         top: 0
-        z-index: map-get($zindex, picker)
+        z-index: map-get($zindex, picker - 1)
 
     td, th
         padding: $cellpadding
